--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "git": {
       "changelog": "git log --pretty=format:\"* %s (%h)\" ${from}...${to}",
       "requireCleanWorkingDir": true,
-      "requireBranch": "master",
+      "requireBranch": "main",
       "requireUpstream": true,
       "requireCommits": false,
       "addUntrackedFiles": false,
