--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
   },
   "dependencies": {
     "file-stream-rotator": "^0.5.7",
-    "moment": "^2.29.1",
-    "zlib": "^1.0.5"
+    "moment": "^2.29.1"
   }
 }
