--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   ],
   "devDependencies": {
     "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.5",
-    "@babel/node": "^7.15.4",
+    "@babel/core": "^7.15.8",
+    "@babel/node": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-env": "^7.15.8",
     "dotenv-cli": "^4.0.0",
-    "release-it": "^14.11.5"
+    "release-it": "^14.11.6"
   },
   "release-it": {
     "hooks": {
@@ -81,7 +81,10 @@
     }
   },
   "dependencies": {
+    "calculate-correlation": "^1.2.2",
     "file-stream-rotator": "^0.5.7",
-    "moment": "^2.29.1"
+    "mathjs": "^9.5.1",
+    "moment": "^2.29.1",
+    "spearman-rho": "^1.0.6"
   }
 }
