--- a/package.json
+++ b/package.json
@@ -25,16 +25,6 @@
     "logger",
     "file logger"
   ],
-  "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.8",
-    "@babel/node": "^7.15.8",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
-    "@babel/preset-env": "^7.15.8",
-    "dotenv-cli": "^4.0.0",
-    "release-it": "^14.11.6"
-  },
   "release-it": {
     "hooks": {
       "before:init": [
@@ -80,11 +70,18 @@
       "skipChecks": false
     }
   },
+  "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "@babel/node": "^7.16.8",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "dotenv-cli": "^4.1.1",
+    "release-it": "^14.12.4"
+  },
   "dependencies": {
-    "calculate-correlation": "^1.2.2",
-    "file-stream-rotator": "^0.5.7",
-    "mathjs": "^9.5.1",
-    "moment": "^2.29.1",
-    "spearman-rho": "^1.0.6"
+    "file-stream-rotator": "^0.6.1",
+    "moment": "^2.29.1"
   }
 }
